# makepad-matplot

./: Cargo.toml  DEV_PLAN.md  dev-plan-matplot.md  makepad-matplot-gap-claude.md
examples/: plot_demo.rs
src/: elements.rs  lib.rs  plot.rs  text.rs
